[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmadrl"
version = "0.1.0"
description = "Hierarchical multi-agent DRL portfolio management with switchable top layer (RL or MoE)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["hmadrl"]

